--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-spinners": "^0.13.8",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
