--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "date-fns": "^2.30.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "leaflet": "^1.9.4",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.13.0",
     "postcss": "8.4.24",
     "prisma": "^4.16.0",
     "query-string": "^8.1.0",
@@ -30,13 +32,17 @@
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3"
   }
 }
