--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prisma": "^4.16.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/react-date-range": "^1.4.4"
   }
 }
